Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-21856

WindowState are not properly in sync between the VM and the XCB lighthouse backend.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.0.0
    • 5.0.0
    • None
    • Linux, X11
    • 86d335b0f2f9cd29f59f6825648bd0705c9570f0

    Description

      If you open the attached example, maximize the window before 9s, and then wait the timer to fire up, you will see in the terminal that the window state showed is 0 -> WindowNoState despite the window has been maximized. My investigation shows that there is actually no code to handle the window state change from the VM in the XCB backend. XCP_PROPERTY_NOTIFY need to be properly parsed to handle this case.

      Attachments

        1. main.cpp
          0.5 kB
          Alexis Menard
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            darktears Alexis Menard
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes